--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "vlucas/phpdotenv": "^5.6",
         "guzzlehttp/guzzle": "^7.8",
         "php-di/php-di": "^7.0",
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+        "ext-pdo": "*"
     }
 }
