--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.8",
         "php-di/php-di": "^7.0",
         "vlucas/valitron": "^1.4",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "firebase/php-jwt": "^6.10"
     }
 }
