fix(Logger): skip log stream it its level is lower than the configured log level

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ APP_DEBUG=true
 APP_SECRET_KEY=xxxxxxxxxx
 
 # Logging
+LOG_LEVEL=debug
 LOG_FILE_DEBUG=php://stdout
 LOG_FILE_INFO=php://stdout
 LOG_FILE_ERROR=php://stderr
